discussion/kv_engine/147739/147739_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44168: WIP

Change-Id: Iba04a2fe4656ebdf0e9b52515bf986591286dd07

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-03-05 13:59:40.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-05 14:17:00.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7465/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43: error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
            COUCHSTORE_OPEN_FLAG_CREATE | COUCHSTORE_OPEN_FLAG_EXCL,
                                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7465/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7465/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34059/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(4223): error C2065: "COUCHSTORE_OPEN_FLAG_EXCL": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34059/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29257/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29257/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8136/ : FAILURE

Compile error at [2021-03-05T14:06:04.023Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9433/ : FAILURE

Compile error at [2021-03-05T14:02:55.367Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16979/ : FAILURE

Compile error at [2021-03-05T14:13:38.602Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: use of undeclared identifier "COUCHSTORE_OPEN_FLAG_EXCL"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16979/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9078/ : FAILURE

Compile error at [2021-03-05T14:02:57.570Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9078/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9219/ : FAILURE

Compile error at [2021-03-05T14:02:08.143Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:4223:43:
error: ?COUCHSTORE_OPEN_FLAG_EXCL? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9219/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
